--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -8,7 +8,7 @@
 //------------------------------------------------------------------------------
 
 using System;
-using AlgoSdk;
+using AlgoSdk.{{name}};
 using AlgoSdk.LowLevel;
 using Unity.Collections;
 using UnityEngine;
