fix(client): fix summary docs

--- a/templates/client.mustache
+++ b/templates/client.mustache
@@ -11,7 +11,7 @@ namespace AlgoSdk
         {{/doc-prefix-lambda}}
 
 
-        /// </summary
+        /// </summary>
         /// <remarks>
         {{#doc-prefix-lambda}}
         /// {{{description}}}
