feat(template): change namespace `AlgoSdk` -> `Algorand.Unity`

--- a/templates/header.mustache
+++ b/templates/header.mustache
@@ -8,7 +8,7 @@
 //------------------------------------------------------------------------------
 
 using System;
-using AlgoSdk.{{name}};
-using AlgoSdk.LowLevel;
+using Algorand.Unity.{{name}};
+using Algorand.Unity.LowLevel;
 using Unity.Collections;
 using UnityEngine;
